--- a/src/app/pages/events/scs/styles.adaptive.scss
+++ b/src/app/pages/events/scs/styles.adaptive.scss
@@ -3,6 +3,7 @@
     .events_list {
       .list-group {
         li {
+          height: auto;
           display: flex;
           flex-direction: column;
           align-items: center;
@@ -11,8 +12,24 @@
             width: 100%;
           }
 
-          .title_description {
+          .title_block {
             width: 100%;
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 586px) {
+  section {
+    .events_list {
+      .list-group {
+        li {
+          .title_block {
+            width: 100%;
+            .title_description {
+              text-align: justify;
+            }
           }
         }
       }
