--- a/src/app/pages/partners/partners.component.html
+++ b/src/app/pages/partners/partners.component.html
@@ -18,7 +18,7 @@
             </div>
             <div class="title_description">
                 <h5>{{ partners.name }}</h5>
-                <p [innerHTML]="partners.description"></p>
+                <div class="description" [innerHTML]="partners.description"></div>
             </div>
         </li>
   }
