--- a/src/app/pages/news-page/scs/styles.desktop.scss
+++ b/src/app/pages/news-page/scs/styles.desktop.scss
@@ -39,27 +39,35 @@ section {
     }
   }
 
-  .image {
+  .description {
     width: 80%;
     height: auto;
     position: relative;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-    padding: 10px;
+    align-items: flex-start;
 
-    img {
-      width: 80%;
-      height: auto;
-      object-fit: cover;
+    .content {
+      width: 100%;
+      position: relative;
+      padding: 5px 10px;
+      text-align: justify;
+      margin-bottom: 10vh;
+      line-height: 1.6;
+
+      .image {
+        width: 50%;
+        height: auto;
+        overflow: hidden;
+        padding: 5px;
+        margin: 0 10px 10px 0;
+        float: left;
+        cursor: pointer;
+
+        .img-fluid {
+          width: 100%;
+        }
+      }
     }
-  }
-
-  .description {
-    width: 80%;
-    height: auto;
-    text-align: justify;
   }
 
   .source_btn {
