--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="background_image">
-    <img class="bg_image" src="../../../assets/image/bg-home.jpg" alt="map" />
+    <img class="bg_image" src="../../../assets/image/bg-home.png" alt="map" />
   </div>
 
   <div class="title">
