--- a/src/app/pages/home/scs/styles.adaptive.scss
+++ b/src/app/pages/home/scs/styles.adaptive.scss
@@ -86,6 +86,7 @@
             border: 1px solid var(--clr-2);
             background-color: var(--clr-w);
             color: var(--clr-b);
+            font-weight: 600;
 
             &:hover {
               background-color: var(--clr-2);
