--- a/src/app/admin/add-country/add-country.component.html
+++ b/src/app/admin/add-country/add-country.component.html
@@ -8,7 +8,7 @@
                 <label for="countrySelect">Виберіть країну</label>
                 <select id="countrySelect" class="form-control" (change)="onCountrySelect($event)">
                     <option value="" disabled selected>Оберіть країну</option>
-                    <option *ngFor="let country of coutryList" [value]="country.link">{{ country.name }}</option>
+                    <option *ngFor="let country of countryList" [value]="country.link">{{ country.name }}</option>
                 </select>
             </div>
 
@@ -28,6 +28,7 @@
                         <th scope="col">Назва</th>
                         <th scope="col">Прапор</th>
                         <th scope="col">Карта</th>
+                        <th scope="col">Петиція</th>
                         <th scope="col">Дії</th>
                     </tr>
                 </thead>
@@ -41,6 +42,9 @@
                         </td>
                         <td class="image">
                             <img [src]="country.circuit" />
+                        </td>
+                        <td>
+
                         </td>
                         <td class="btn_tr">
                             <a (click)="delCountry(country)" type="button" title="Видалити">
