--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -11,6 +11,10 @@
             <div class="line"></div>
         </div>
 
+        <div class="pettition_button">
+            <a *ngIf="falePettition" class="pettion_btn" href="{{falePettition}}" target="_blank">PETITION</a>
+        </div>
+
         <div class="container-fluid">
 
             <div class="row">
@@ -46,7 +50,8 @@
                 <!-- Права колонка: Деталі -->
                 <div class="col-md-8">
                     <div class="information" *ngIf="selectedItem">
-                        <a *ngIf="selectedItem.linkPetition" class="pettion_btn" href="{{selectedItem.linkPetition}}" target="_blank">PETITION</a>
+                        <a *ngIf="selectedItem.linkPetition" class="pettion_btn" href="{{selectedItem.linkPetition}}"
+                            target="_blank">PETITION</a>
                         <h2>{{ selectedItem.nameOrganization }}</h2>
                         <p class="description" [innerHTML]="selectedItem.descriptionOrganization"></p>
                         <img [src]="selectedItem.imageOrganization" alt="Image" class="img-fluid"
