--- a/src/app/pages/country/country.component.html
+++ b/src/app/pages/country/country.component.html
@@ -91,7 +91,7 @@
             </div>
         </div>
         <div class="creat">
-            <p>© 2024 All Rights Reserved.</p>
+            <p>© 2024 <a href="http://localhost:4200/" target="_blank">OhleDev</a> All Rights Reserved.</p>
         </div>
     </footer>
 
