--- a/src/app/pages/events/events.component.html
+++ b/src/app/pages/events/events.component.html
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="creat">
-            <p>© 2024 <a href="http://localhost:4200/" target="_blank">OhleDev</a> All Rights Reserved.</p>
+            <p>© 2024 <a href="https://ohle-dev.in.ua/" target="_blank">OhleDev</a> All Rights Reserved.</p>
         </div>
     </footer>
 
