--- a/src/app/pages/news-page/news-page.component.html
+++ b/src/app/pages/news-page/news-page.component.html
@@ -46,6 +46,9 @@
                     rel="noopener noreferrer">
                     <img src="../../../assets/icon/instagram.png" alt="">
                 </a>
+                <a class="facebook" href="https://x.com/brakethefake?s=11" target="_blank" rel="noopener noreferrer">
+                    <img src="../../../assets/icon/x.png" alt="X">
+                </a>
             </div>
         </div>
         <div class="creat">
